chpt04-immobiliare - refactored ImmobiliareUserRepository